--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "swiper": "^5.3.6",
